--- a/index.html
+++ b/index.html
@@ -4,85 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-studio</title>
-   <!--  <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-<!--HEADER-->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+<!-- #region ========HEADER===========-->
+    <header class="header">
+        <nav class="header-nav">
+            <a class="logo header-logo" href="./index.html"><span class="logo-accent">web</span>studio</a>
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-list-link" href="#">Studio</a></li>
+                <li class="nav-item"><a class="nav-list-link" href="#">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-list-link" href="#">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-            <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contacts">
+            <ul class="contacts-list">
+            <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
+            <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
+    <!-- #endregion header -->
+    
+<!-- #region ========MAIN========== -->
     <main>
-<!--HERO-->
+<!-- #region ========HERO=============-->
         <section class="hero">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-btn" type="button">Order Service</button>
         </section>
-<!--FEATURES-->
+<!-- #endregion HERO -->
+        
+<!-- #region ===========FEATURES==========-->
         <section class="features">
-            <h2>Features</h2> <!-- Згодом сховаємо в css -->
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h2 class="title">Features</h2> <!-- Згодом сховаємо в css -->
+            <ul class="features-list">
+                <li class="features-item">
+                    <h3 class="features-item-title">Strategy</h3>
+                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="features-item">
+                    <h3 class="features-item-title">Punctuality</h3>
+                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="features-item">
+                    <h3 class="features-item-title">Diligence</h3>
+                    <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="features-item">
+                    <h3 class="features-item-title">Technologies</h3>
+                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-<!--TEAM-->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+<!-- #endregion FEATURES -->
+
+<!-- #region ===========TEAM=========== -->
+        <section class="team">
+            <h2 class="title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
                     <img src="./images/worker-1.jpg" alt="Photo of Mark Guerrero" width=264>
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="team-item-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/worker-2.jpg" alt="Photo of Tom Ford" width=264>
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="team-item-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/worker-3.jpg" alt="Photo of Camila Garcia" width=264>
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="team-item-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/worker-4.jpg" alt="Photo of Daniel Wilson" width=264>
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="team-item-text">UI Designer</p>
                 </li>
             </ul>
         </section>
+<!-- #endregion TEAM -->
+
+<!-- #region ===========PORTFOLIO======= -->
+ <section class="portfolio">
+    <h2>Our Portfolio</h2>
+    <ul class="portfolio-list">
+        <li class="portfolio-item">
+            <img src="/images/portfolio/banking-app.jpg" alt="screenshots of banking application">
+            <h3>Banking App</h3>
+            <p class="text">App</p>
+        </li>
+        <li class="portfolio-item">
+            <img src="/images/portfolio/cashless-payment.jpg" alt="Mobile and Terminal">
+            <h3>Cashless Payment</h3>
+            <p class="text">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+            <img src="./images/portfolio/meditation-app.jpg" alt="laptop">
+            <h3>Meditation App</h3>
+            <p class="text">App</p>
+        </li>
+        <li class="portfolio-item">
+            <img src="./images/portfolio/taxi-service.jpg" alt="driver in taxi">
+            <h3>Taxi Service</h3>
+            <p class="text">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+            <img src="./images/portfolio/screen-illustrations.jpg" alt="Mobile creenshoots">
+            <h3>Screen Illustrations</h3>
+            <p class="text">Design</p>
+        </li>
+        <li class="portfolio-item">
+            <img src="./images/portfolio/online-courses.jpg" alt="Happy young girl with mobile and headphones">
+            <h3>Online Courses</h3>
+            <p class="text">Marketing</p>
+        </li>
+    </ul>
+ </section>
+<!-- #endregion PORTFOLIO -->
     </main>
-<!--FOOTER-->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<!-- #endregion MAIN -->
+
+<!-- #region ========FOOTER============-->
+    <footer class="footer">
+        <a class="logo footer-logo" href="./index.html"><span class="logo-accent">web</span>studio</a>
+<p class="text footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
+<!-- #endregion FOOTER -->
 </body>
 </html>
