--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
             <h2 class="title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
-                    <img src="./images/worker-1.jpg" alt="Photo of Mark Guerrero" width=264>
+                    <img src="./images/team/mark_guerrero.jpg" alt="Photo of Mark Guerrero" width=264>
                     <h3>Mark Guerrero</h3>
                     <p class="team-item-text">Product Designer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/worker-2.jpg" alt="Photo of Tom Ford" width=264>
+                    <img src="./images/team/tom-ford.jpg" alt="Photo of Tom Ford" width=264>
                     <h3>Tom Ford</h3>
                     <p class="team-item-text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/worker-3.jpg" alt="Photo of Camila Garcia" width=264>
+                    <img src="./images/team/camila-garcia.jpg" alt="Photo of Camila Garcia" width=264>
                     <h3>Camila Garcia</h3>
                     <p class="team-item-text">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/worker-4.jpg" alt="Photo of Daniel Wilson" width=264>
+                    <img src="./images/team/daniel-wilson.jpg" alt="Photo of Daniel Wilson" width=264>
                     <h3>Daniel Wilson</h3>
                     <p class="team-item-text">UI Designer</p>
                 </li>
