--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <!-- #region ========HEADER===========-->
     <header class="header">
         <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html"><span class="logo-accent">web</span>studio</a>
+            <a class="logo" href="./index.html">web <span class="header-logo">Studio</span></a>
             <ul class="nav-list">
-                <li class="nav-item"><a class="nav-list-link" href="#">Studio</a></li>
-                <li class="nav-item"><a class="nav-list-link" href="#">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-list-link" href="#">Contacts</a></li>
+                <li class="nav-item"><a class="nav-list-link" href="./index.html">Studio</a></li>
+                <li class="nav-item"><a class="nav-list-link" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-list-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
@@ -70,22 +70,22 @@
             <ul class="team-list">
                 <li class="team-item">
                     <img src="./images/team/mark_guerrero.jpg" alt="Photo of Mark Guerrero" width=264>
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="team-item-title">Mark Guerrero</h3>
                     <p class="team-item-text">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/team/tom-ford.jpg" alt="Photo of Tom Ford" width=264>
-                    <h3>Tom Ford</h3>
+                    <h3 class="team-item-title">Tom Ford</h3>
                     <p class="team-item-text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/team/camila-garcia.jpg" alt="Photo of Camila Garcia" width=264>
-                    <h3>Camila Garcia</h3>
+                    <h3 class="team-item-title">Camila Garcia</h3>
                     <p class="team-item-text">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/team/daniel-wilson.jpg" alt="Photo of Daniel Wilson" width=264>
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="team-item-title">Daniel Wilson</h3>
                     <p class="team-item-text">UI Designer</p>
                 </li>
             </ul>
@@ -94,36 +94,36 @@
 
 <!-- #region ===========PORTFOLIO======= -->
  <section class="portfolio">
-    <h2>Our Portfolio</h2>
+    <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-list">
         <li class="portfolio-item">
-            <img src="/images/portfolio/banking-app.jpg" alt="screenshots of banking application">
-            <h3>Banking App</h3>
+            <img src="./images/portfolio/banking-app.jpg" alt="screenshots of banking application" width="360">
+            <h3 class="portfolio-item-title">Banking App</h3>
             <p class="text">App</p>
         </li>
         <li class="portfolio-item">
-            <img src="/images/portfolio/cashless-payment.jpg" alt="Mobile and Terminal">
-            <h3>Cashless Payment</h3>
+            <img src="./images/portfolio/cashless-payment.jpg" alt="Mobile and Terminal" width="360">
+            <h3 class="portfolio-item-title">Cashless Payment</h3>
             <p class="text">Marketing</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/portfolio/meditation-app.jpg" alt="laptop">
-            <h3>Meditation App</h3>
+            <img src="./images/portfolio/meditation-app.jpg" alt="laptop" width="360">
+            <h3 class="portfolio-item-title">Meditation App</h3>
             <p class="text">App</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/portfolio/taxi-service.jpg" alt="driver in taxi">
-            <h3>Taxi Service</h3>
+            <img src="./images/portfolio/taxi-service.jpg" alt="driver in taxi" width="360">
+            <h3 class="portfolio-item-title">Taxi Service</h3>
             <p class="text">Marketing</p>
         </li>
         <li class="portfolio-item">
             <img src="./images/portfolio/screen-illustrations.jpg" alt="Mobile creenshoots">
-            <h3>Screen Illustrations</h3>
+            <h3 class="portfolio-item-title">Screen Illustrations</h3>
             <p class="text">Design</p>
         </li>
         <li class="portfolio-item">
             <img src="./images/portfolio/online-courses.jpg" alt="Happy young girl with mobile and headphones">
-            <h3>Online Courses</h3>
+            <h3 class="portfolio-item-title">Online Courses</h3>
             <p class="text">Marketing</p>
         </li>
     </ul>
@@ -134,7 +134,7 @@
 
 <!-- #region ========FOOTER============-->
     <footer class="footer">
-        <a class="logo footer-logo" href="./index.html"><span class="logo-accent">web</span>studio</a>
+        <a class="logo" href="./index.html">web<span class="footer-logo">Studio</span></a>
 <p class="text footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 <!-- #endregion FOOTER -->
