--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
             <p class="text">Marketing</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/portfolio/screen-illustrations.jpg" alt="Mobile creenshoots">
+            <img src="./images/portfolio/screen-illustrations.jpg" alt="Mobile creenshoots" width="360">
             <h3 class="portfolio-item-title">Screen Illustrations</h3>
             <p class="text">Design</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/portfolio/online-courses.jpg" alt="Happy young girl with mobile and headphones">
+            <img src="./images/portfolio/online-courses.jpg" alt="Happy young girl with mobile and headphones" width="360">
             <h3 class="portfolio-item-title">Online Courses</h3>
             <p class="text">Marketing</p>
         </li>
