--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!-- #region ===========PORTFOLIO======= -->
  <section class="portfolio">
-    <h2 class="portfolio-title">Our Portfolio</h2>
+    <h2 class="portfolio-title title">Our Portfolio</h2>
     <ul class="portfolio-list">
         <li class="portfolio-item">
             <img src="./images/portfolio/banking-app.jpg" alt="screenshots of banking application" width="360">
